objects/Integration_Solution_Resource__c.object
<CustomObject>
    <description>What it does?  Object holding information about integration solution resources.  Downstream Impact?  None.  Which Department is Owner?  Sales Ops.

Part of the DEMO REQUEST process.</description>
    <fields>
        <fullName>Integration_Solution__c</fullName>
        <description>What it does?  Holds a link between integration solutions and the integration solution resource.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Integration Solution</label>
        <referenceTo>Integration_Solution__c</referenceTo>
        <relationshipLabel>Integration Solution Resources</relationshipLabel>
        <relationshipName>Integration_Solution_Resources</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Link_Type__c</fullName>
        <description>What it does?  Holds the type of the link for the integration solution resource.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Link Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alliance Fact Sheet</fullName>
                </value>
                <value>
                    <fullName>Case Study</fullName>
                </value>
                <value>
                    <fullName>Presentation</fullName>
                </value>
                <value>
                    <fullName>Product Brochure</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>White Paper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>What it does?  Holds the name of the integration solution resource.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Name</label>
        <length>75</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <description>What it Does? Holds the url of the integration solution resource. Downstream Impact? None. Which Department is Owner? Sales Ops.</description>
        <label>Url</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Integration Solution Resource</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Integration Solution Resource Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Solution Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>URLs_must_start_with_HTTP</fullName>
        <active>true</active>
        <errorConditionFormula>LEFT(LOWER(Url__c), 7) != &apos;http://&apos; &amp;&amp;
LEFT(LOWER(Url__c), 8) != &apos;https://&apos;</errorConditionFormula>
        <errorDisplayField>Url__c</errorDisplayField>
        <errorMessage>Url must start with http:// or https://</errorMessage>
    </validationRules>
</CustomObject>